Mon Jan 16 16:48:11 UTC 2006  Stoyan Paunov  <spaunov@isis.vanderbilt.edu>

        * DAnCE/spec_RepositoryManager/Options.h:
        * DAnCE/spec_RepositoryManager/Options.cpp:
        * DAnCE/spec_RepositoryManager/PC_Updater.cpp:
        * DAnCE/spec_RepositoryManager/README.txt:
        * DAnCE/spec_RepositoryManager/RMadmin.cpp:
        * DAnCE/spec_RepositoryManager/RepositoryManager.cpp:
        * DAnCE/spec_RepositoryManager/RepositoryManager_Impl.h:
        * DAnCE/spec_RepositoryManager/RepositoryManager_Impl.cpp:

          Added the newest changes to the RepoMan. This change add the 
          functionality that pertains to interface types. It is currently
          disabled due to lack of support in the modeling tools for interfaces
          for assemby-based interfaces.

          I still need to clean up some of the output and some of the code before 
          the release of the beta.

Mon Jan 16 16:22:25 UTC 2006  Nilabja R  <nilabjar@dre.vanderbilt.edu>

        * DAnCE/NodeManager/BaseMonitor.h:
        * DAnCE/NodeManager/CIAO_Monitor.h:
        * DAnCE/NodeManager/CIAO_Monitor.cpp:
        * DAnCE/NodeManager/Monitor.mpc:
        * DAnCE/NodeManager/MonitorCB.h:
        * DAnCE/NodeManager/MonitorCB.cpp:
        * DAnCE/NodeManager/MonitorController.h:
        * DAnCE/NodeManager/MonitorController.inl:
        * DAnCE/NodeManager/MonitorController.cpp:
        * DAnCE/NodeManager/NodeManager.mpc:
        * DAnCE/NodeManager/NodeManager_Impl.h:
        * DAnCE/NodeManager/NodeManager_Impl.cpp:
        * DAnCE/NodeManager/Node_Manager.cpp:
          These files implement the Monitor within the
          NodeManager implementation.

        * DAnCE/TargetManager/CmpClient.cpp:
        * DAnCE/TargetManager/Deployment_Configuration.h:
        * DAnCE/TargetManager/Deployment_Configuration.cpp:
        * DAnCE/TargetManager/DomainDataManager.h:
        * DAnCE/TargetManager/DomainDataManager.cpp:
        * DAnCE/TargetManager/TM_Client.mpc: